--- a/css/global.css
+++ b/css/global.css
@@ -5,3 +5,54 @@
     font-family: 'Space Mono';
     src: url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 }
+
+* {
+    font-family: 'Space Mono', monospace;
+    color: darkgreen;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    position: relative;
+    background-color: black;
+    height: 150px;
+}
+
+header h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    font-size: 3em;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    min-width: 320px;   
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+main div {
+    margin: 20px;
+}
+
+main div label {
+    font-size: 1.2em;
+}
+
+.text-input {
+    width: 90%;
+    min-height: 100px;
+    max-height: 300px;
+    resize: vertical;
+    overflow: ;
+}
