--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,8 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("https://c.tenor.com/yheo1GGu3FwAAAAM/rick-roll-rick-ashley.gif");
+    background-image: url("https://i.pinimg.com/originals/c5/9a/d2/c59ad2bd4ad2fbacd04017debc679ddb.gif");
+    /* background-image: url("https://c.tenor.com/yheo1GGu3FwAAAAM/rick-roll-rick-ashley.gif"); */
 }
 
 header {
@@ -35,14 +36,14 @@ header h1 {
 main {
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
     min-width: 320px;   
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
 
-main div {
+#encoding, #decoding, #keys-container {
     margin: 20px;
 }
 
@@ -68,7 +69,29 @@ main div label {
     min-height: 200px;
     max-height: 600px;
     resize: vertical;
-    overflow: hidden;
+    overflow: auto;
     border: solid darkgreen 3px;
     padding: 0 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.text-input[placeholder]:empty::before {
+    content: attr(placeholder);
+}
+
+input[type="button"] {
+    background-color: green;
+    color: black;
+    height: 30px;
+    width: 80px;
+    font-weight: bold;
+    font-size: 17px;
+}
+
+input[type="button"]:hover {
+    border: 2px solid white;
+}
+
+input[type="button"]:active {
+    filter: brightness(75%);
 }
